--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
   color:#F50;
   padding-left: 10px;
 }
+.am-tab-bar{
+  position:fixed;
+  bottom:0;
+  width:100%
+}
+.am-navbar{
+  position:fixed;
+  bottom:0;
+  width:100%
+}
+.page-content{
+  padding:45px 5px
+}
