--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,30 @@
 .error-msg{
   color:#F50;
   padding-left: 10px;
+  padding-top: 10px;
 }
 .am-tab-bar{
   position:fixed;
   bottom:0;
-  width:100%
+  width:100%;
+  height:50px;
 }
-.am-navbar{
+.fixd-header,.am-navbar{
   position:fixed;
-  bottom:0;
-  width:100%
+  top:0;
+  width:100%;
+  z-index:10;
 }
 .page-content{
-  padding:45px 5px
+  padding:45px 5px;
 }
+
+#chat-page .chat-me .am-list-extra{
+  flex-basis: auto
+}
+#chat-page .chat-me .am-list-content{
+  padding-right: 15px;
+  text-align: right;
+}
+.stice 
+
