--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,14 @@
   padding: 45px 0
 }
 
+#chat-page .am-grid-icon{
+  display: none
+}
+
+#chat-page .am-grid-text{
+  margin-top: 0;
+}
+
 #chat-page .chat-me .am-list-extra{
   flex-basis: auto
 }
